Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,37 +31,159 @@
         <hr>
 
         <section id="main_content">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <p><strong>Table of Contents</strong></p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<ul>
+<li>
+<a href="#mycila-jmx">Mycila JMX</a>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<ul>
+<li><a href="#maven-repository">Maven Repository</a></li>
+<li>
+<a href="#documentation">Documentation</a>
+
+<ul>
+<li><a href="#1-annotations">1. Annotations</a></li>
+<li><a href="#2-dynamic-naming">2. Dynamic naming</a></li>
+<li><a href="#3-how-to-use">3. How to use</a></li>
+<li><a href="#4-jmxmetadataassembler">4. JmxMetadataAssembler</a></li>
+<li><a href="#5-mycile-guice-integration">5. Mycile Guice Integration</a></li>
+<li><a href="#6-tools">6. Tools</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul><h1>
+<a name="mycila-jmx" class="anchor" href="#mycila-jmx"><span class="octicon octicon-link"></span></a>Mycila JMX</h1>
+
+<p>This small project enables to export your classes easily through JMX.</p>
+
+<p><strong>Issues:</strong> <a href="https://github.com/mycila/jmx/issues">https://github.com/mycila/jmx/issues</a></p>
+
+<p><img width="100px" src="http://www.sonatype.com/system/images/W1siZiIsIjIwMTMvMDQvMTIvMTEvNDAvMzcvMTgzL05leHVzX0ZlYXR1cmVfTWF0cml4X29zZ2lfbG9nby5wbmciXV0/Nexus-Feature-Matrix-osgi-logo.png" title="OSGI Compliant"><a href="https://travis-ci.org/mycila/jmx"><img src="https://travis-ci.org/mycila/jmx.png?branch=master" alt="Build Status"></a>
+<a href="https://bitdeli.com/free" title="Bitdeli Badge"><img src="https://d2weczhvl823v0.cloudfront.net/mycila/jmx/trend.png" alt="Bitdeli Badge"></a>
+<a href="http://githalytics.com/mycila/jmx"><img src="https://cruel-carlota.pagodabox.com/85294c815bb3ce46bd79f4cf8d9bb341" alt="githalytics.com alpha" title="githalytics.com"></a></p>
+
+<h2>
+<a name="maven-repository" class="anchor" href="#maven-repository"><span class="octicon octicon-link"></span></a>Maven Repository</h2>
+
+<ul>
+<li>
+<strong>Releases</strong> </li>
+</ul><p>Available in Maven Central Repository: <a href="http://repo1.maven.org/maven2/com/mycila/jmx/">http://repo1.maven.org/maven2/com/mycila/jmx/</a></p>
+
+<ul>
+<li><strong>Snapshots</strong></li>
+</ul><p>Available in OSS Repository:  <a href="https://oss.sonatype.org/content/repositories/snapshots/com/mycila/jmx/">https://oss.sonatype.org/content/repositories/snapshots/com/mycila/jmx/</a></p>
+
+<p><strong>Maven dependency</strong></p>
+
+<pre><code>&lt;dependency&gt;
+    &lt;groupId&gt;com.mycila&lt;/groupId&gt;
+    &lt;artifactId&gt;mycila-jmx&lt;/artifactId&gt;
+    &lt;version&gt;X.Y.ga&lt;/version&gt;
+&lt;/dependency&gt;
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h2>
+<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h2>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="1-annotations" class="anchor" href="#1-annotations"><span class="octicon octicon-link"></span></a>1. Annotations</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<ul>
+<li>
+<code>@JmxBean</code>: mark a class to be exported to JMX and set its name </li>
+<li>
+<code>@JmxMethod</code>: export a method</li>
+<li>
+<code>@JmxProperty</code>: export a bean property (getter/setter) and specify its access writes </li>
+<li>
+<code>@JmxField</code>: export a field to JMX and specify its access writes</li>
+<li>
+<code>@JmxMetric</code>: export a JMX metric, its name and unit (counter or gauge)</li>
+</ul><h3>
+<a name="2-dynamic-naming" class="anchor" href="#2-dynamic-naming"><span class="octicon octicon-link"></span></a>2. Dynamic naming</h3>
+
+<p>A bean can implement the interface <code>JmxSelfNaming</code> to return the its <code>ObjectName</code></p>
 
 <h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a name="3-how-to-use" class="anchor" href="#3-how-to-use"><span class="octicon octicon-link"></span></a>3. How to use</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Supposing you have annotated your class like this</p>
+
+<pre><code>@JmxBean("com.company:type=MyService,name=main")
+public final class MyService {
+
+    private String name;
+
+    @JmxField
+    private int internalField = 10;
+
+    @JmxProperty
+    public String getName() { return name; }
+
+    public void setName(String name) { this.name = name; }
+
+    @JmxMethod(parameters = {@JmxParam(value = "number", description = "put a big number please !")})
+    void increment(int n) {
+        internalField += n;
+    }
+}
+</code></pre>
+
+<p>Then create an exporter which will be able to export your beans:</p>
+
+<pre><code>MycilaJmxExporter exporter = new MycilaJmxExporter();
+exporter.setMetadataAssembler(getMetadataAssembler());
+exporter.setEnsureUnique(true);
+</code></pre>
+
+<p>And export your service:</p>
+
+<pre><code>exporter.register(myServiceInstance)
+</code></pre>
 
 <h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a name="4-jmxmetadataassembler" class="anchor" href="#4-jmxmetadataassembler"><span class="octicon octicon-link"></span></a>4. JmxMetadataAssembler</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><code>JmxMetadataAssembler</code> are implementations which describes the exportable members of a class and how to export them. Several implementation exist:</p>
+
+<ul>
+<li>
+<code>PublicMetadataAssembler</code>: when beans are registered, only public methods, properties and fields are exported</li>
+<li>
+<code>AnnotationMetadataAssembler</code>: when beans are registered, only annotated methods, properties and fields are exported
+
+<ul>
+<li>
+<code>CustomMetadataAssembler</code>: you can specify which members are exported. This class can be useful if you only need to export just some members and if you do not have access to the source code of the class to export</li>
+</ul>
+</li>
+</ul><p><strong>Example</strong></p>
+
+<pre><code>CustomMetadataAssembler assembler = new CustomMetadataAssembler()
+    .addAttribute(MyClass.class, "myRWField")
+    .addProperty(MyClass.class, "myProperty")
+    .addOperation(MyClass.class, "goMethod");
+</code></pre>
+
+<p>You will be able to find other examples in the Unit Tests </p>
 
 <h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a name="5-mycile-guice-integration" class="anchor" href="#5-mycile-guice-integration"><span class="octicon octicon-link"></span></a>5. Mycile Guice Integration</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>When using the service discovery feature of <a href="http://mycila.github.io/guice/">Mycile Guice</a> (Google Guice extensions) JMX annoteated beans are automatically discovered and exported</p>
+
+<h3>
+<a name="6-tools" class="anchor" href="#6-tools"><span class="octicon octicon-link"></span></a>6. Tools</h3>
+
+<ul>
+<li>
+<a href="http://visualvm.java.net/">VisualVM</a>: Connects to a Java process and manage exported JMX classes</li>
+<li>
+<a href="http://mx4j.sourceforge.net/">MX4J</a>: Web interface yo manage JMX beans</li>
+</ul>
         </section>
 
         <footer>
