--- a/index.html
+++ b/index.html
@@ -58,12 +58,17 @@
 
 <p>This small project enables to export your classes easily through JMX.</p>
 
-<p><strong>Issues:</strong> <a href="https://github.com/mycila/jmx/issues">https://github.com/mycila/jmx/issues</a></p>
-
-<p><img width="100px" src="http://www.sonatype.com/system/images/W1siZiIsIjIwMTMvMDQvMTIvMTEvNDAvMzcvMTgzL05leHVzX0ZlYXR1cmVfTWF0cml4X29zZ2lfbG9nby5wbmciXV0/Nexus-Feature-Matrix-osgi-logo.png" title="OSGI Compliant"><a href="https://travis-ci.org/mycila/jmx"><img src="https://travis-ci.org/mycila/jmx.png?branch=master" alt="Build Status"></a>
-<a href="http://githalytics.com/mycila/jmx"><img src="https://cruel-carlota.pagodabox.com/85294c815bb3ce46bd79f4cf8d9bb341" alt="githalytics.com alpha" title="githalytics.com"></a></p>
-
-<h2>
+<ul>
+<li>
+<strong>Issues:</strong> <a href="https://github.com/mycila/jmx/issues">https://github.com/mycila/jmx/issues</a>
+</li>
+<li>
+<strong>OSGI Compliant:</strong> <img width="100px" src="http://www.sonatype.com/system/images/W1siZiIsIjIwMTMvMDQvMTIvMTEvNDAvMzcvMTgzL05leHVzX0ZlYXR1cmVfTWF0cml4X29zZ2lfbG9nby5wbmciXV0/Nexus-Feature-Matrix-osgi-logo.png" title="OSGI Compliant">
+</li>
+<li>
+<strong>Build Status:</strong> <a href="https://travis-ci.org/mycila/jmx"><img src="https://travis-ci.org/mycila/jmx.png?branch=master" alt="Build Status"></a>
+</li>
+</ul><h2>
 <a name="maven-repository" class="anchor" href="#maven-repository"><span class="octicon octicon-link"></span></a>Maven Repository</h2>
 
 <ul>
@@ -182,7 +187,7 @@ exporter.setEnsureUnique(true);
 <a href="http://visualvm.java.net/">VisualVM</a>: Connects to a Java process and manage exported JMX classes</li>
 <li>
 <a href="http://mx4j.sourceforge.net/">MX4J</a>: Web interface yo manage JMX beans</li>
-</ul>
+</ul><p><a href="http://githalytics.com/mycila/jmx"><img src="https://cruel-carlota.pagodabox.com/85294c815bb3ce46bd79f4cf8d9bb341" alt="githalytics.com alpha" title="githalytics.com"></a></p>
         </section>
 
         <footer>
