Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,14 +71,13 @@
 </ul><h2>
 <a name="maven-repository" class="anchor" href="#maven-repository"><span class="octicon octicon-link"></span></a>Maven Repository</h2>
 
-<ul>
-<li>
-<strong>Releases</strong> </li>
-</ul><p>Available in Maven Central Repository: <a href="http://repo1.maven.org/maven2/com/mycila/jmx/">http://repo1.maven.org/maven2/com/mycila/jmx/</a></p>
+<p><strong>Releases</strong></p>
 
-<ul>
-<li><strong>Snapshots</strong></li>
-</ul><p>Available in OSS Repository:  <a href="https://oss.sonatype.org/content/repositories/snapshots/com/mycila/jmx/">https://oss.sonatype.org/content/repositories/snapshots/com/mycila/jmx/</a></p>
+<p>Available in Maven Central Repository: <a href="http://repo1.maven.org/maven2/com/mycila/jmx/">http://repo1.maven.org/maven2/com/mycila/jmx/</a></p>
+
+<p><strong>Snapshots</strong></p>
+
+<p>Available in OSS Repository:  <a href="https://oss.sonatype.org/content/repositories/snapshots/com/mycila/jmx/">https://oss.sonatype.org/content/repositories/snapshots/com/mycila/jmx/</a></p>
 
 <p><strong>Maven dependency</strong></p>
 
@@ -89,7 +88,11 @@
 &lt;/dependency&gt;
 </code></pre>
 
-<h2>
+<p><strong>Maven sites</strong></p>
+
+<ul>
+<li><a href="http://mycila.github.io/jmx/reports/1.1.ga/index.html">1.1.ga</a></li>
+</ul><h2>
 <a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h2>
 
 <h3>
