--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ exporter.setEnsureUnique(true);
 <li>
 <a href="http://visualvm.java.net/">VisualVM</a>: Connects to a Java process and manage exported JMX classes</li>
 <li>
-<a href="http://mx4j.sourceforge.net/">MX4J</a>: Web interface yo manage JMX beans</li>
+<a href="http://mx4j.sourceforge.net/">MX4J</a>: Web interface to manage JMX beans</li>
 </ul>
 
 <p><a href="http://githalytics.com/mycila/jmx"><img src="https://cruel-carlota.pagodabox.com/ccb8ae70363afb2c06e4582434ceb163" alt="githalytics.com alpha" title="githalytics.com"></a></p>
